# zmk-west-commands

./: .gitignore  README.md  developer.agent.md  pyproject.toml  repro_race.py  requirements-dev.txt  requirements-test.txt  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/actions/zmk-ble-test/: README.md  action.yml
.github/actions/zmk-renode-test/: README.md  action.yml
.github/agents/: developer.agent.md
.github/workflows/: copilot-setup-steps.yml  docs.yml  test.yml
ble-studio-host/: CMakeLists.txt  README.md  hex2inc.py  prj.conf
ble-studio-host/src/: main.c
docs/: development.md  renode-internals.md  renode-testing.md  renode-transport-orthogonal.md  renode-usb-design.md  zmk-ble-test.md  zmk-build.md  zmk-test.md
docs/design/: renode-ble-test-infra.md  renode-internals.md  renode-transport-orthogonal.md
examples/ble-studio-central/: CMakeLists.txt  README.md  generate_requests.py  requests.inc
examples/ble-studio-central/src/: main.c
renode-ble-host/: CMakeLists.txt  Kconfig  README.md  prj.conf
renode-ble-host/src/: main.c
scripts/: west-commands.yml  west-test-ble-standalone.yml  west-test-ble.yml  west-test-renode-standalone.yml  west-test-renode.yml  west-test-standalone.yml  west-test.yml  zmk_ble_test.py  zmk_build.py  zmk_renode_test.py  zmk_test.py
scripts/lib/: tee_popen.py
scripts/lib/ble/: runner.py  studio_requests.py
scripts/lib/renode/: renode_harness.py  renode_smoke.py  rpc_client.py  segger_rtt_writeskip.py
tests-fail/build-error/: native_posix_64.keymap
tests-fail/output-diff/: keycode_events.snapshot  native_sim.keymap
tests/ble/split/basic/: events.patterns  events.snapshot  peripheral.overlay  siblings.txt
tests/ble/studio/core/: events.patterns  events.snapshot  generate_requests.py  nrf52_bsim.keymap  siblings.txt  studio_requests.hex  studio_requests.json
tests/build_yaml/: build.yaml
tests/test1/: events.patterns
tests/test2/: keycode_events.snapshot  native_sim.keymap
tests/zmk-config/: build-ble-split.yaml  build-ble.yaml  build-renode.yaml  build-split.yaml  build-usb-split.yaml  build.yaml
tests/zmk-config/config/: my_awesome_keyboard.conf
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: concepts.mdx  getting-started.mdx  index.mdx
zephyr/: module.yml
(+39 files in other folders)
